--- a/index.Rmd
+++ b/index.Rmd
@@ -246,19 +246,19 @@ The final exam will be taken in class during your normal in-class time and will 
 
 #### _Individual portion_:
 
-Individual final exam will be **December 10th** 
+Individual final exam will be **December 16th, 6 - 7:50pm** 
 
-* the individual portion of the final exam will be worth 80% of your exam grade.
+* The individual portion of the final exam will be worth 80% of your exam grade.
 * Potential final exam questions will be released one week prior to the exam. All exam questions will be selected from this set.
 * On the exam day, you will be given a randomly chosen subset of the previously released potential exam questions for your exam.
 * The individual final exam is closed book, closed notes. 
-* A formula sheet will be provided to use during the exam (also released with the potential midterm exam questions).
+* A formula sheet will be provided to use during the exam (also released with the potential final exam questions).
 * You will be allowed a calculator on the individual final exam. 
 * You will **not** be required to use Rstudio on the individual final exams.
 
 #### _Group portion_:
 
-Group final exam will be **December 13th**. 
+Group final exam will be **December 10th (during normal class time)**. 
 
 * The group portion of the final exam will be worth 20% of your exam grade.
 * The group final exams is open book, open notes. 
