--- a/index.Rmd
+++ b/index.Rmd
@@ -242,17 +242,16 @@ Group midterm exam 1 will be **October 1st**; Group midterm exam 2 will be **Nov
 
 ### Final exam (20%)
 
-The final exam will be taken in class during your normal in-class time and will be **cumulative**. A practice exam will be released in D2L two weeks prior to the exam, with solutions to the practice exam released in D2L one week prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.
+The group final exam will be taken in class during your normal in-class time. A practice exam will be released in D2L one week prior to the exam, with solutions to the practice exam released in D2L the Sunday prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.
 
 #### _Individual portion_:
 
 Individual final exam will be **December 16th, 6 - 7:50pm** 
 
 * The individual portion of the final exam will be worth 80% of your exam grade.
-* Potential final exam questions will be released one week prior to the exam. All exam questions will be selected from this set.
-* On the exam day, you will be given a randomly chosen subset of the previously released potential exam questions for your exam.
-* The individual final exam is closed book, closed notes. 
-* A formula sheet will be provided to use during the exam (also released with the potential final exam questions).
+* No potential final exam questions will be released.
+* The individual final exam is closed book. 
+* You will be allowed to create a one page note sheet for the exam.  You will also be provided a one page formula sheet during the exam.
 * You will be allowed a calculator on the individual final exam. 
 * You will **not** be required to use Rstudio on the individual final exams.
 
