--- a/index.Rmd
+++ b/index.Rmd
@@ -217,11 +217,20 @@ You will complete weekly assignments in [Gradescope](https://www.gradescope.com/
 
 ### Midterm exams (30%)
 
-There will be two midterm exams (worth 15% of the course grade each). Midterm exams will be taken in class during your normal in-class time. Each exam has an individual (Wednesday) and group (Friday) component.  A practice exam will be released in D2L two weeks prior to the exam, with solutions to the practice exam released in D2L one week prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.
+There will be two midterm exams (worth 15% of the course grade each). Midterm exams will be taken in class during your normal in-class time. Each exam has an group (Wednesday) and individual (Friday) component.  A practice exam will be released in D2L two weeks prior to the exam, with solutions to the practice exam released in D2L one week prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.
+
+#### _Group portion_:
+
+Group midterm exam 1 will be **September 29th**; Group midterm exam 2 will be **November 3rd**. 
+
+* Group portions of the midterms are worth 20% of your midterm exam grade.
+* Group midterm exams are open book, open notes. 
+* You will be allowed a calculator on the group midterm exams. 
+* You **will** be required to use Rstudio on the group midterm exams.
 
 #### _Individual portion_:
 
-Individual midterm exam 1 will be **September 29th**; Individual midterm exam 2 will be **November 3rd**. 
+Individual midterm exam 1 will be **October 1st**; Individual midterm exam 2 will be **November 5th**. 
 
 * Individual portions of the midterms will be worth 80% of your midterm exam grade.
 * Potential individual midterm exam questions will be released one week prior to the exam. All exam questions will be selected from this set.
@@ -229,20 +238,20 @@ Individual midterm exam 1 will be **September 29th**; Individual midterm exam 2 
 * Individual midterm exams are closed book, closed notes. 
 * A formula sheet will be provided to use during the exam (also released with the potential midterm exam questions).
 * You will be allowed a calculator on the individual midterm exams. 
-* You will **not** be required to use Rstudio on the invdividual midterm exams.
+* You will **not** be required to use Rstudio on the individual midterm exams.
 
-#### _Group portion_:
-
-Group midterm exam 1 will be **October 1st**; Group midterm exam 2 will be **November 5th**. 
-
-* Group portions of the midterms are worth 20% of your midterm exam grade.
-* Group midterm exams are open book, open notes. 
-* You will be allowed a calculator on the group midterm exams. 
-* You **will** be required to use Rstudio on the group midterm exams.
 
 ### Final exam (20%)
 
 The group final exam will be taken in class during your normal in-class time. A practice exam will be released in D2L one week prior to the exam, with solutions to the practice exam released in D2L the Sunday prior to the exam. Further details, resources, and instructions for each exam will be posted the week prior to the exam in D2L.
+#### _Group portion_:
+
+Group final exam will be **December 10th (during normal class time)**. 
+
+* The group portion of the final exam will be worth 20% of your exam grade.
+* The group final exams is open book, open notes. 
+* You will be allowed a calculator on the group final exam. 
+* You **will** be required to use Rstudio on the group final exam.
 
 #### _Individual portion_:
 
@@ -254,15 +263,6 @@ Individual final exam will be **December 16th, 6 - 7:50pm**
 * You will be allowed to create a one page note sheet for the exam.  You will also be provided a one page formula sheet during the exam.
 * You will be allowed a calculator on the individual final exam. 
 * You will **not** be required to use Rstudio on the individual final exams.
-
-#### _Group portion_:
-
-Group final exam will be **December 10th (during normal class time)**. 
-
-* The group portion of the final exam will be worth 20% of your exam grade.
-* The group final exams is open book, open notes. 
-* You will be allowed a calculator on the group final exam. 
-* You **will** be required to use Rstudio on the group final exam.
 
 
 ### Letter grades
